Solve double line issue on small screen

--- a/src/features/trinket/Map.module.less
+++ b/src/features/trinket/Map.module.less
@@ -24,8 +24,7 @@
   }
 
   span:global(.ant-typography) {
-    display: block;
-    margin-top: 12px;
+    display: none;
 
     @media (min-width: @screen-sm) {
       display: inline;
